force-app/main/default/objects/ssot__BenefitSession__dlm/fields/ssot__BenefitSessionStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__BenefitSessionStatus__c</fullName>
    <label>Benefit Session Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BenefitSessionStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>