force-app/main/default/objects/ssot__BenefitSession__dlm/fields/ssot__rel_1716726630109_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726630109_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BenefitSession_BenefitScheduleId_map_rel</label>
    <referenceTo>ssot__BenefitSchedule__dlm</referenceTo>
    <relationshipLabel>BenefitSession_BenefitScheduleId_map_rel</relationshipLabel>
    <relationshipName>rel_1716726630109_end</relationshipName>
    <type>Lookup</type>
</CustomField>